0.1.71
	- add topo.maritimes dataset
	- add read.topo(), plot.topo(), and summary.topo()
	- add gebco.colors()
0.1.70
	- plot.TS(): make isopycnal list work better for nearly-fresh water
	- trim.ctd(): improve equilibration-phase deletion using piecewise-linear regression
	- read.ctd(): handle cases without cruise information or scan column
	- permit setting xlab and ylab in plot.TS()
	- make processing log timestamps be in GMT
	- add as.windrose() and plot.windrose()
	- add sealevel.tuk sea-level dataset
	- add tidem(), predict.tide(), summary.tide(), plot.tide(), and data(tidedata)
	- establish a uniform form for objects created by "read" and "as"
	- let sw.rho() and similar sw. functions take a ctd object as a single argument
	- add sw.dynamic.height()
	- make section.grid() and ctd.decimate() extrapolate to surface in "approx" method
	- add summary.oce()
	- make all objects inherit from a new class "oce"
	- fix Issue 12: read.sealevel() had a hard-wired filename (remnant from debugging)
	  [http://code.google.com/p/r-oce/issues/detail?id=12&can=1&q=label:Type-Defect]
0.1.69
	- modify documentation slightly
	- start a migration to more uniform object structures
	- rename as.CTD() to as.ctd(), to make it consistent with similar functions
	- add read.section()
	- add section.grid(), which only grids in p at the moment
	- add a03 dataset
	- fix SF bug 1833719: warnings from read.ctd()
	- fix Issue 8: read.coastline() not producing data
	  [http://code.google.com/p/r-oce/issues/detail?id=8&can=1&q=label:Type-Defect]
	- improve ability of trim.ctd() to ignore spurious initial data
	- add "connect.points" option to plot.TS()
	- add "station" item to "ctd" object
	- change as.CTD() to produce sigma.theta instead of sigma
0.1.68
	- add coastline.world dataset, and increase resolution of coastline.maritimes
	- plot.TS() no longer rotates the RH margin isopycnal labels (unless told to)
0.1.67
	- allow sw.rho() and similar routines take matrices as arguments for S, t, etc