@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.1.71
-Date: 2008-04-06
+Date: 2008-04-07
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
