@@ -16,7 +16,7 @@ summary.section <- function(object, quiet=FALSE, ...)
         stn <- object$data$station[[i]]
         depth[i] <- if (have.water.depth) stn$metadata$water.depth else max(stn$data$pressure, na.rm=TRUE)
         distance[i] <- sprintf("%.1fkm", geod.dist(lat1, lon1, stn$metadata$latitude, stn$metadata$longitude))
-        levels[i] <- length(object$station[[i]]$data$pressure)
+        levels[i] <- length(stn$data$pressure)
     }
     if (!quiet) {
         if (have.water.depth) {
